# IoT_Senzor_System

./: .gitignore  CMakeLists.txt
backend/: pom.xml
backend/src/main/java/com/iot/backend/: BackendApplication.java  MqttConfig.java  SensorController.java  SensorData.java  SensorService.java
backend/src/main/resources/static/: index.html
backend/src/test/java/com/iot/backend/: BackendApplicationTests.java
src/: main.cpp
